--- a/spring_boot/src/main/resources/config/application.properties
+++ b/spring_boot/src/main/resources/config/application.properties
@@ -1,8 +1,41 @@
 # for server
-server.port=8081
+server.port=443
+server.http.port=80
 
-# for log
-logging.config=classpath:config/logback.xml
+# for evn(多环境配置)
+spring.profiles.active=live
+
+# for tools(热部署配置)
+#热部署生效
+#spring.devtools.restart.enabled=true
+#设置重启的目录，添加哪个目录的文件需要重启
+#spring.devtools.restart.additional-paths=src/main/java
+
+# for ssl(http/https)
+server.ssl.key-store=classpath:.keystore
+server.ssl.key-password=123456
+
+# 数据库连接
+# mysql 5
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# mysql 6 +
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/boot1?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=123456
+
+#hikari pool
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=1800000
+spring.datasource.hikari.auto-commit=true
+
+# for mybatis
+mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.type-aliases-package=com.ph.springBoot.modules.*.entity
+#mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+
+
 
 # for test
 com.name=penghuang
