--- a/spring_boot/pom.xml
+++ b/spring_boot/pom.xml
@@ -66,6 +66,15 @@
         </dependency>
         <!--Mybatis依赖结束-->
 
+        <!--jpa依赖开始-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <!--jpa依赖结束-->
+
     </dependencies>
 
     <build>
