--- a/spring_boot/src/main/resources/config/application.properties
+++ b/spring_boot/src/main/resources/config/application.properties
@@ -5,6 +5,16 @@ server.http.port=80
 # for evn(多环境配置)
 spring.profiles.active=live
 
+# for jpa(jpa配置)
+# validate\create-drop\update
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
 # for tools(热部署配置)
 #热部署生效
 #spring.devtools.restart.enabled=true
