--- a/spring_boot/pom.xml
+++ b/spring_boot/pom.xml
@@ -75,6 +75,14 @@
 
         <!--jpa依赖结束-->
 
+        <!--jpa分页查询所用到的commons依赖开始-->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <!--jpa分页查询所用到的commons依赖结束-->
+
     </dependencies>
 
     <build>
