"日期：2020-08-16   内容：课后作业redis，thymeleaf"

--- a/spring_boot/pom.xml
+++ b/spring_boot/pom.xml
@@ -83,6 +83,30 @@
         </dependency>
         <!--jpa分页查询所用到的commons依赖结束-->
 
+        <!--非关系型数据库（存储数据库）Redis依赖开始-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+        <!--Redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--pool2-->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+        <!--非关系型数据库（存储数据库）Redis依赖结束-->
+
+        <!--thymeleaf依赖开始-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+        <!--thymeleaf依赖结束-->
+
     </dependencies>
 
     <build>
