--- a/spring_boot/src/main/resources/config/application.properties
+++ b/spring_boot/src/main/resources/config/application.properties
@@ -45,7 +45,32 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #mybatis.type-aliases-package=com.ph.springBoot.modules.*.entity
 #mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
+# for Redis
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+#spring.redis.password=111111
+spring.redis.timeout=300
 
+#for Lettuce & Redis(数据池)
+# 最大连接数
+spring.redis.lettuce.pool.max-active=8
+# 最大等待时间
+spring.redis.lettuce.pool.max-wait=10000
+# 最大空闲连接数
+spring.redis.lettuce.pool.max-idle=8
+# 最小空闲连接数
+spring.redis.lettuce.pool.min-idle=0
+# 关闭超时时间
+spring.redis.lettuce.shutdown-timeout=100
+
+# for thymeleaf(xml/xhtml/html5模版引擎)
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=utf-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 # for test
 com.name=penghuang
