--- a/spring_boot/src/main/resources/config/application.properties
+++ b/spring_boot/src/main/resources/config/application.properties
@@ -3,7 +3,7 @@ server.port=443
 server.http.port=80
 
 # for evn(∂‡ª∑æ≥≈‰÷√)
-spring.profiles.active=live
+spring.profiles.active=dev
 
 # for jpa(jpa≈‰÷√)
 # validate\create-drop\update
