"日期：2020-08-25   内容：课后作业shiro权限控制"

--- a/spring_boot/src/main/resources/config/application.properties
+++ b/spring_boot/src/main/resources/config/application.properties
@@ -27,6 +27,9 @@ spring.resource.path.pattern=/upload/**
 spring.resource.folder.windows=d:/upload/
 spring.resource.folder.linux=/upload/
 
+#开启shiro
+shiro.web.enabled=true
+
 # for tools(热部署配置)
 #热部署生效
 #spring.devtools.restart.enabled=true
