--- a/spring_boot/pom.xml
+++ b/spring_boot/pom.xml
@@ -107,6 +107,23 @@
 
         <!--thymeleaf依赖结束-->
 
+        <!--shiro依赖开始-->
+        <!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring-boot-web-starter -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring-boot-web-starter</artifactId>
+            <version>1.4.1</version>
+        </dependency>
+        <!--thymeleaf对shiro的扩展包，支持页面书写shiro标签-->
+        <!-- https://mvnrepository.com/artifact/com.github.theborakompanioni/thymeleaf-extras-shiro -->
+        <dependency>
+            <groupId>com.github.theborakompanioni</groupId>
+            <artifactId>thymeleaf-extras-shiro</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+        <!--shiro依赖结束-->
+
     </dependencies>
 
     <build>
